--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -17,5 +17,10 @@
     <li>JavaScript</li>
     <li>And a lot more!</li>
   </ul>
+  <p>This is my <strong>first web page</strong>!</p>
+  <h2>Written with the guidance of <em>Epicodus</em></h2>
+  <p>Check out <a href="http://www.epicodus.com/">Epicodus</a>. It's a great school for learning web programming!</p>
+  <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
+  <img src="img/kitten.jpeg" alt="A photo of a cute kitten.">
 </body>
 </html>
